...
  "password": "Kata Sandi",
  "enterPassword": "Masukkan kata sandi",
  "signIn": "Masuk",
  "or": "ATAU",
  "continueGoogle": "Lanjut dengan Google",
  "noAccount": "Belum punya akun?",
  "signUp": "Daftar",
  "createAccount": "Buat Akun",
  "signUpStarted": "Mari kita mulai",
  "username": "Nama Pengguna",
  "enterUsername": "Masukkan nama pengguna",
  "alreadyAccount": "Sudah punya akun?",
  "appearance": "Tampilan",
...
